# GDecimal

./: .gitignore  CMakeLists.txt  GDecimal.workspace  Makefile  README.md  compile_commands.json
Decimal/: CMakeLists.txt  Decimal.project  Gdecimal.cpp  compile_flags.txt
Decimal/include/: Base.h  Decimal.h  DecimalConvert.h
DecimalTest/: CMakeLists.txt  DecimalMathTest.h  IO_test.cpp  Power_test.cpp  compile_flags.txt  decimaltest.project  main.cpp
LibDecimal/: CMakeLists.txt  LibDecimal.project  compile_flags.txt
LibDecimal/include/: Base.h  CTX.h  Decimal.h  DecimalConvert.h  DecimalMath.h  DecimalMathConstant.h  FixPointData.h  FixPointOperator.h  FixPointReciprocal.h  MultBase.h  pch.h
LibDecimal/source/: 100000_digits_of_pi.txt  20000_digits_of_ln10.txt  20000_digits_of_ln2.txt  20000_digits_of_sqrt3.txt
benchmark/: CMakeLists.txt  DecimalBenchmarkTest.h  DecimalMathTest.h  benchmark.cpp  benchmark.project  compile_flags.txt  decimaltest.project  main.cpp
include/: DecimalMathConstant.h  FixPointOperator.h  FixPointReciprocal.h  MultBase.h
source/: 100000_digits_of_e.txt
test/: CMakeLists.txt  compile_flags.txt  main.cpp  test.cpp  test.project
